--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,9 @@
 body {
-  background-color: #000;
+  background-color: #000; /* nền đen */
+  color: #fff;
+  font-family: "Rubik", sans-serif;
+  margin: 0;
+  padding: 0px 230px; /* cách lề trên và 2 bên */
 }
 h2 {
   font-family: "Rubik Mono One", monospace;
@@ -7,6 +11,9 @@ h2 {
   font-size: 30px;
   font-style: normal;
   color: #0063ff;
+  text-align: left;
+  padding: 0;
+  margin-bottom: 16px;
 }
 #title {
   font-family: Epilogue, sans-serif;
@@ -14,4 +21,99 @@ h2 {
   font-size: 96px;
   font-style: normal;
   color: #0063ff;
+  text-align: left;
+  margin-bottom: 400px;
+  margin-top: 0;
+}
+#wwa {
+  font-family: "Epilogue", sans-serif;
+  font-weight: 700;
+  font-size: 60px;
+  font-style: normal;
+  color: #0063ff;
+  text-align: left;
+  font-weight: 700;
+  color: #0063ff;
+  margin-bottom: 16px;
+}
+hr {
+  border: none;
+  border-top: 1px solid #333;
+  margin: 0 0 24px 0;
+  padding: 0;
+}
+.content {
+  display: flex; /* sắp xếp ngang */
+  justify-content: space-between; /* đẩy 2 khối ra 2 bên */
+  align-items: center;
+  gap: 40px; /* khoảng cách giữa description và info */
+}
+
+.description {
+  font-family: "Epilogue", sans-serif;
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 1.6;
+  max-width: 800px;
+  color: #fff;
+  margin: 0;
+}
+
+.info {
+  font-family: "Epilogue", sans-serif;
+  display: flex;
+  gap: 40px;
+  font-size: 14px;
+  font-weight: 100;
+  color: #aaa;
+}
+
+.info strong {
+  color: #fff;
+  font-weight: 500;
+  margin-top: 5px;
+}
+
+/* 4 cái ô của tk đầu bùi quý */
+.work-section {
+  display: flex; 
+  align-items: center; 
+  justify-content: center; 
+  gap: 20px; 
+  margin-top: 50px;
+}
+
+.card {
+  background: #0a0a0a; /* nền tối */
+  color: white;
+  width: 250px;
+  height: 300px;
+  border-radius: 12px;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.card h3 {
+  font-size: 22px;
+  margin: 10px 0;
+  color: white;
+}
+
+.card p {
+  font-size: 14px;
+  color: #ddd;
+}
+
+.number {
+  font-weight: bold;
+  font-size: 18px;
+  color: #aaa;
+}
+
+.arrow {
+  font-size: 30px;
+  color: white;
 }
