--- a/style/main.css
+++ b/style/main.css
@@ -1,22 +1,33 @@
 body {
-  background-color: #000; /* nền đen */
+  background-color: #000;
   color: #fff;
   font-family: "Rubik", sans-serif;
   margin: 0;
-  padding: 0px 230px; /* cách lề trên và 2 bên */
+  padding: 0px 230px;
 }
+
+.menu {
+  display: flex;
+  justify-content: space-between; /* đẩy 2 bên */
+  align-items: center;
+  margin-top: 50px;
+}
+.icon_menu {
+  display: block;
+  margin-bottom: 30px;
+  cursor: pointer;
+}
+
 h2 {
   font-family: "Rubik Mono One", monospace;
-  font-weight: 400;
-  font-size: 30px;
-  font-style: normal;
+  font-weight: bold;
+  font-size: 28px;
   color: #0063ff;
-  text-align: left;
-  padding: 0;
-  margin-bottom: 16px;
+  margin: 0;
 }
+
 #title {
-  font-family: Epilogue, sans-serif;
+  font-family: "Epilogue", sans-serif;
   font-weight: 700;
   font-size: 96px;
   font-style: normal;
@@ -138,7 +149,7 @@ hr {
 }
 
 .what-we-do h2 {
-  font-size: 36px;
+  font-size: 60px;
   font-weight: bold;
   color: #0063ff;
   font-family: "Epilogue", sans-serif;
@@ -171,25 +182,17 @@ hr {
   color: white;
 }
 
-.content-row {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  gap: 40px;
-}
-
 .features {
   list-style: none;
   padding: 0;
   margin: 0;
   flex: 1;
 }
-
 .features li {
   position: relative;
-  padding: 15px 0;
+  padding: 30px 0;
   border-bottom: 1px solid #333;
-  font-size: 20px;
+  font-size: 50px;
   color: #777;
   display: flex;
   align-items: center;
@@ -197,23 +200,50 @@ hr {
 }
 
 .features .number {
-  font-size: 16px;
+  font-size: 32px;
   color: #888;
   min-width: 30px;
 }
 
 .features .arrow {
+  position: absolute;
   margin-left: auto;
   color: white;
-  font-size: 20px;
+  font-size: 50px;
+  right: 300px;
+}
+.content-row {
+  position: relative; /* để con absolute bám theo khung cha */
+  display: flex;
+  align-items: flex-start;
 }
 
 .feature-image {
-  flex-shrink: 0;
+  position: absolute;
+  right: 0; /* dính mép phải */
+  top: 50px; /* chỉnh khoảng cách xuống so với tiêu đề */
+  z-index: 2; /* nằm trên border */
 }
 
 .feature-image img {
-  width: 200px;
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
   border-radius: 12px;
-  transform: rotate(0deg); /* để ảnh nằm thẳng */
+  display: block;
+  transform: rotate(12deg);
+}
+
+/* --- mũi tên: mặc định ẩn --- */
+.features .arrow {
+  display: none;
+  position: absolute;
+  margin-left: auto;
+  color: white;
+  font-size: 50px;
+  right: 300px;
+}
+
+.features li.active .arrow {
+  display: block;
 }
