--- a/style/main_header.css
+++ b/style/main_header.css
@@ -12,8 +12,8 @@
 
 h2 {
   font-family: "Rubik Mono One", monospace;
-  font-weight: bold;
-  font-size: 28px;
+  font-weight: 400;
+  font-size: 24px;
   color: #0063ff;
   margin: 0;
 }
