--- a/style/main.css
+++ b/style/main.css
@@ -66,12 +66,45 @@ hr {
 }
 
 /* 4 cái ô của tk đầu bùi quý */
+.work-section-wrapper {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+
+  padding: 80px 0;
+}
+
+.work-section-wrapper::before,
+.work-section-wrapper::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 25%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  z-index: 0;
+  opacity: 1;
+}
+
+.work-section-wrapper::before {
+  top: 0;
+  background-image: url("../design/SOURCE_IMAGE/Group24.png");
+}
+
+.work-section-wrapper::after {
+  bottom: 0;
+  background-image: url("../design/SOURCE_IMAGE/Group25.png");
+}
+
 .work-section {
+  position: relative;
+  z-index: 1;
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 20px;
-  margin-top: 50px;
+  gap: 50px;
 }
 
 .card {
