--- a/style/main.css
+++ b/style/main.css
@@ -3,9 +3,11 @@ body {
   color: #fff;
   font-family: "Rubik", sans-serif;
   margin: 0;
-  padding: 0px 230px;
+  padding: 0px 100px;
 }
-
+.whoweare {
+  padding: 0px 130px;
+}
 #title {
   font-family: "Epilogue", sans-serif;
   font-weight: 700;
@@ -38,6 +40,7 @@ hr {
   justify-content: space-between; /* đẩy 2 khối ra 2 bên */
   align-items: center;
   gap: 40px; /* khoảng cách giữa description và info */
+  padding: 0px 130px;
 }
 
 .description {
@@ -118,9 +121,15 @@ hr {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  background-size: cover; /* ảnh vừa khít */
+  background-size: cover;
   background-position: center;
   position: relative;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.card:hover {
+  transform: scale(1.08);
+  box-shadow: 0 15px 30px rgba(0, 102, 255, 0.6);
 }
 
 .card h3 {
@@ -143,120 +152,4 @@ hr {
 .arrow {
   font-size: 30px;
   color: white;
-}
-
-/* what we do */
-
-.what-we-do {
-  background: #000;
-  color: white;
-  padding: 40px;
-  font-family: "Epilogue", sans-serif;
-}
-
-.header-row {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  margin-bottom: 30px;
-}
-
-.what-we-do h2 {
-  font-size: 60px;
-  font-weight: bold;
-  color: #0063ff;
-  font-family: "Epilogue", sans-serif;
-}
-
-.button-group {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-.button-group .row {
-  display: flex;
-  gap: 10px;
-}
-
-.button-group button {
-  padding: 8px 20px;
-  border: 1px solid #0073ff;
-  border-radius: 20px;
-  background: transparent;
-  color: #0073ff;
-  cursor: pointer;
-  font-size: 14px;
-  transition: 0.3s;
-}
-
-.button-group button:hover {
-  background: #0073ff;
-  color: white;
-}
-
-.features {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  flex: 1;
-}
-.features li {
-  position: relative;
-  padding: 30px 0;
-  border-bottom: 1px solid #333;
-  font-size: 50px;
-  color: #777;
-  display: flex;
-  align-items: center;
-  gap: 15px;
-}
-
-.features .number {
-  font-size: 32px;
-  color: #888;
-  min-width: 30px;
-}
-
-.features .arrow {
-  position: absolute;
-  margin-left: auto;
-  color: white;
-  font-size: 50px;
-  right: 300px;
-}
-.content-row {
-  position: relative; /* để con absolute bám theo khung cha */
-  display: flex;
-  align-items: flex-start;
-}
-
-.feature-image {
-  position: absolute;
-  right: 0; /* dính mép phải */
-  top: 50px; /* chỉnh khoảng cách xuống so với tiêu đề */
-  z-index: 2; /* nằm trên border */
-}
-
-.feature-image img {
-  width: 300px;
-  height: 300px;
-  object-fit: cover;
-  border-radius: 12px;
-  display: block;
-  transform: rotate(12deg);
-}
-
-/* --- mũi tên: mặc định ẩn --- */
-.features .arrow {
-  display: none;
-  position: absolute;
-  margin-left: auto;
-  color: white;
-  font-size: 50px;
-  right: 300px;
-}
-
-.features li.active .arrow {
-  display: block;
 }
