--- a/style/main_slide.css
+++ b/style/main_slide.css
@@ -1,18 +1,16 @@
 .location-slider {
   width: 100%;
-  max-width: 1200px;
   margin: 0 auto;
   padding: 30px 0;
-
-  padding-top: 20px;
-  padding-bottom: 20px;
+  background: transparent;
 }
 
 .slider-viewport {
+  max-width: 2200px;
   width: 100%;
-  max-width: 1200px;
   margin: 0 auto;
   overflow: hidden;
+  position: relative;
 }
 
 .slider-track {
