--- a/style/menu.css
+++ b/style/menu.css
@@ -107,8 +107,15 @@ body {
   margin-bottom: 20px;
 }
 
-/* Sign Up Button */
-.signup-btn {
+/* Button */
+.button-group {
+  display: flex;
+  gap: 60px;
+  margin-top: 30px;
+}
+
+.signup-btn,
+.signin-btn {
   background: #0063ff;
   color: white;
   border: none;
@@ -122,7 +129,8 @@ body {
   display: inline-block;
 }
 
-.signup-btn:hover {
+.signup-btn:hover,
+.signin-btn:hover {
   background: #0051d4;
 }
 
