--- a/style/menu.css
+++ b/style/menu.css
@@ -162,6 +162,21 @@ body {
     margin-top: 40px;
   }
 }
+.detail-btn {
+  background: #5319b0;
+  color: white;
+  border: none;
+  border-radius: 30px;
+  padding: 9px 25px;
+  font-size: 1.2rem;
+  font-weight: 500;
+  cursor: pointer;
+  transition: background 0.3s;
+}
+
+.detail-btn:hover {
+  background: #c80633;
+}
 .logout-btn {
   background: #5319b0;
   color: white;
