--- a/style/detail.css
+++ b/style/detail.css
@@ -101,9 +101,9 @@ body {
   margin-top: auto;
   text-align: left;
   font-family: "Epilogue", sans-serif;
-  font-size: 55px;
+  font-size: 32px;
   font-weight: 400;
-  color: #0063ff;
+  color: #ffffff;
 }
 .subheadline {
   font-family: "Epilogue", sans-serif;
